<resources>
    <string name="app_name">约</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="no_data">暂无数据</string>
    <string name="activity_feekback">意见反馈</string>
    <string name="type_all">全部分类</string>
    <string name="sort_default">默认排序</string>
    <string name="time_all">全部时间</string>
    <string name="activity_record">我参加的约</string>
    <string name="activity_collection">我收藏的约</string>
    <string name="activity_edit">发布约会</string>
    <string name="activity_letter">私信</string>
    <string name="activity_detail">约会详情</string>
    <string name="edit_send">发布</string>
    <string name="edit_title_style">选择约会类别</string>
    <string name="ok">确定</string>
    <string name="edit_title_gender">选择对方性别</string>
    <string name="edit_title_grade">选择对方年龄</string>
    <string name="edit_title_college">选择对方学院</string>
    <string name="edit_title_cost">选择消费方式</string>
    <string name="activity_letter_detail">私信详情</string>
    <string name="edit_title_time">选择约会时间</string>
    <string name="login">登陆</string>
    <string name="activity_create">我发起的约</string>
</resources>
