<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pager="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <com.jude.view.jpagerview.JPagerView
            android:id="@+id/jpv_banner"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            pager:hint_mode="point"
            pager:hint_alpha="0"
            pager:autoplay="3000"/>

    <LinearLayout
        android:id="@+id/select_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/btn_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center">
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/type_all"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_dropdown"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:id="@+id/btn_sort"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center">
            <TextView
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/sort_default"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_dropdown"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:id="@+id/btn_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center">
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/time_all"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_dropdown"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>